Fixed disabled states of icon buttons (#963)

--- a/src/components/button/button_icon/_button_icon.scss
+++ b/src/components/button/button_icon/_button_icon.scss
@@ -24,7 +24,7 @@
     }
 
     &:hover, &:focus {
-      background-color: $euiColorEmptyShade;
+      background-color: transparent;
       text-decoration: none;
     }
   }
