--- a/src/components/flex/_flex_grid.scss
+++ b/src/components/flex/_flex_grid.scss
@@ -34,20 +34,18 @@ $fractions: (
    * without columns.
    */
   .euiFlexGrid--#{$gutterName} {
+    margin: -$halfGutterSize;
+    align-items: stretch;
+
     > .euiFlexItem {
       margin: $halfGutterSize;
     }
   }
 
   @each $fraction, $percentage in $fractions {
-    .euiFlexGrid--#{$gutterName} {
-      margin: -$halfGutterSize;
-      align-items: stretch;
-
-      &.euiFlexGrid--#{$fraction} {
-        > .euiFlexItem {
-          flex-basis: calc(#{$percentage} - #{$gutterSize});
-        }
+    .euiFlexGrid--#{$gutterName}.euiFlexGrid--#{$fraction} {
+      > .euiFlexItem {
+        flex-basis: calc(#{$percentage} - #{$gutterSize});
       }
     }
   }
