--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -1,11 +1,14 @@
 $euiModalBorderColor: tintOrShade($euiShadowColorLarge, 50%, 0%) !default; // match shadow
 
+/**
+ * 1. Fix IE overflow issue (min-height) by adding a separate wrapper for the
+ *    flex display. https://github.com/philipwalton/flexbugs#flexbug-3
+ */
+
 .euiModal {
   @include euiBottomShadowLarge;
+  display: flex; /* 1 */
 
-  display: flex;
-  flex-direction: column;
-  max-height: 75vh; // We overflow the modal body based off this
   position: relative;
   background-color: $euiColorEmptyShade;
   border: 1px solid $euiModalBorderColor;
@@ -14,6 +17,13 @@ $euiModalBorderColor: tintOrShade($euiShadowColorLarge, 50%, 0%) !default; // ma
   z-index: $euiZModal;
   min-width: 50%;
   animation: euiModal $euiAnimSpeedSlow $euiAnimSlightBounce;
+
+  .euiModal__flex { /* 1 */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    max-height: 75vh; // We overflow the modal body based off this
+  }
 }
 
 .euiModal--confirmation {
@@ -88,7 +98,6 @@ $euiModalBorderColor: tintOrShade($euiShadowColorLarge, 50%, 0%) !default; // ma
   .euiModal {
     position: fixed;
     width: calc(100vw + 2px);
-    max-height: 100vh;
     left: 0;
     right: 0;
     bottom: 0;
@@ -96,6 +105,10 @@ $euiModalBorderColor: tintOrShade($euiShadowColorLarge, 50%, 0%) !default; // ma
     border-radius: 0;
     box-shadow: none;
     border: none;
+
+    .euiModal__flex { /* 1 */
+      max-height: 100vh;
+    }
   }
 
   .euiModalHeader {
