--- a/src/global_styling/mixins/_helpers.scss
+++ b/src/global_styling/mixins/_helpers.scss
@@ -44,6 +44,7 @@
     background-clip: content-box;
   }
 
+  &::-webkit-scrollbar-corner,
   &::-webkit-scrollbar-track {
     background-color: transparent;
   }
