Quick fix to title sizing (#997)

--- a/src/components/xy_chart/_legend.scss
+++ b/src/components/xy_chart/_legend.scss
@@ -50,9 +50,9 @@
 }
 
 .euiTitle--small {
-  @include euiFontSizeM;
+  // @include euiFontSizeM;
 }
 
 .euiTitle--large {
-  @include euiFontSizeXL;
+  // @include euiFontSizeXL;
 }
