--- a/src/components/page/page_side_bar/_page_side_bar.scss
+++ b/src/components/page/page_side_bar/_page_side_bar.scss
@@ -3,7 +3,7 @@
  */
 .euiPageSideBar {
   min-width: $euiSize * 12; /* 1 */
-  flex: 0 0 0; /* 1 */
+  flex: 0 1 0%; /* 1 */
   margin-right: $euiSizeL;
 }
 
