--- a/src/components/panel/_mixins.scss
+++ b/src/components/panel/_mixins.scss
@@ -1,6 +1,7 @@
 /**
  *  Mixin for use in:
  *  - EuiCard
+ *  - EuiPageContent
 */
 @mixin euiPanel($selector){
   @if variable-exists(selector) == false {
