--- a/src/components/panel/_variables.scss
+++ b/src/components/panel/_variables.scss
@@ -1,6 +1,8 @@
 /**
  * Padding map referenced in:
  *  - Popover
+ *  - PageContentHeader
+ *  - PageContentHeaderSection
 */
 $euiPanelPaddingModifiers: (
   "paddingSmall": $euiSizeS,
