--- a/src/components/page/page_content/_page_content_header.scss
+++ b/src/components/page/page_content/_page_content_header.scss
@@ -1,13 +1,22 @@
+@import '../../panel/variables';
+
 .euiPageContentHeader {
-  margin-bottom: $euiSizeL;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+  // Adjust vertical spacing based on content padding prop
+  @each $modifier, $amount in $euiPanelPaddingModifiers {
+    .euiPageContent[class*="#{$modifier}"] & {
+      margin-bottom: $amount;
+    }
+  }
 }
 
 @include euiBreakpoint('xs','s') {
-  .euiPageContentHeader {
+  .euiPageContentHeader--responsive {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
