--- a/src/components/header/_header_logo.scss
+++ b/src/components/header/_header_logo.scss
@@ -5,8 +5,8 @@
 
   position: relative;
   height: $euiHeaderChildSize;
-  line-height: $euiSizeXL;
-  padding: $euiSize $euiSizeL;
+  line-height: $euiHeaderChildSize;
+  padding: 0 $euiSize;
   display: inline-block;
   vertical-align: middle;
   white-space: nowrap;
@@ -17,19 +17,32 @@
   }
 }
 
-  .euiHeaderLogo__icon {
-    height: $euiSizeXL;
+.euiHeaderLogo__icon {
+  opacity: 1;
+  position: relative;
+  top: -2px;
+}
+
+.euiHeaderLogo__text {
+  @include euiTitle("s");
+  padding-left: $euiSize;
+  font-weight: $euiFontWeightLight;
+}
+
+@include euiBreakpoint('xs') {
+  .euiHeaderLogo {
+    height: $euiHeaderChildSize*.75;
+    line-height: $euiHeaderChildSize*.75;
+    padding: 0 $euiSizeM;
+  }
+
+  .euiHeaderLogo__icon.euiIcon--xLarge {
     width: $euiSizeL;
-    opacity: 1;
+    height: $euiSizeL;
   }
 
   .euiHeaderLogo__text {
-    @include euiTitle("s");
-    padding-left: $euiSize;
-    font-weight: $euiFontWeightLight;
-
-    @include euiBreakpoint('xs','s') {
-      @include euiTitle("xxs");
-      font-weight: $euiFontWeightLight;
-    }
+    @include euiTitle("xs");
+    font-weight: $euiFontWeightRegular;
   }
+}
