--- a/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
+++ b/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
@@ -3,7 +3,7 @@
 @import '../../link/mixins';
 
 .euiHeaderBreadcrumbs {
-  margin-left: $euiSizeL;
+  margin-left: $euiSize;
   display: flex;
   align-items: center;
 }
