--- a/src/global_styling/variables/_z_index.scss
+++ b/src/global_styling/variables/_z_index.scss
@@ -12,6 +12,7 @@ $euiZLevel8:          8000;
 $euiZLevel9:          9000;
 
 $euiZContent:         $euiZLevel0;
+$euiZHeader:          $euiZLevel1;
 $euiZContentMenu:     $euiZLevel2;
 $euiZNavigation:      $euiZLevel4;
 $euiZMask:            $euiZLevel6;
