--- a/src/components/header/header_section/_header_section_item.scss
+++ b/src/components/header/header_section/_header_section_item.scss
@@ -17,15 +17,16 @@
   }
 }
 
-  .euiHeaderSectionItem__button {
-    height: $euiHeaderChildSize;
-    min-width: $euiHeaderChildSize;
-    text-align: center;
+.euiHeaderSectionItem__button {
+  height: $euiHeaderChildSize;
+  min-width: $euiHeaderChildSize;
+  text-align: center;
+  font-size: 0; // aligns icons better vertically
 
-    &:focus {
-      background: $euiFocusBackgroundColor;
-    }
+  &:focus {
+    background: $euiFocusBackgroundColor;
   }
+}
 
 .euiHeaderSectionItem--borderLeft {
   &:after {
@@ -39,5 +40,36 @@
     width: 1px;
     left: auto;
     right: 0;
+  }
+}
+
+.euiHeaderNotification {
+  position: absolute;
+  top: 18%;
+  right: 18%;
+  box-shadow: 0 0 0 1px $euiHeaderBackgroundColor;
+}
+
+@include euiBreakpoint('xs') {
+  .euiHeaderSectionItem,
+  .euiHeaderSectionItem__button {
+    height: $euiHeaderChildSize*.75;
+    min-width: $euiHeaderChildSize*.75;
+  }
+
+  .euiHeaderSectionItem--borderLeft,
+  .euiHeaderSectionItem--borderRight {
+    &:after {
+      display: none;
+    }
+  }
+
+  // On small screens just show a small dot indicating there are notifications
+  .euiHeaderNotification {
+    min-width: 0;
+    border-radius: $euiSizeS;
+    @include size($euiSizeS);
+    color: $euiColorAccent;
+    overflow: hidden;
   }
 }
